# sample-cmake-project

./: CMakeLists.txt  README.md
cmake/: arm-gcc-toolchain.cmake  clang-arm-gcc-toolchain.cmake  utils.cmake
netconf_cli/: CMakeLists.txt
netconf_cli/src/: main.cpp
oam/: CMakeLists.txt
oam/src/: main.cpp
